package unicrm.domain;

public enum RequestStatus {
    NEW, VIEWED, ACCEPTED, REJECTED, DONE
}
