package unicrm.domain;

public enum UrgencyLevel {
    LOW, MEDIUM, HIGH
}
